--- a/src/Forgot.css
+++ b/src/Forgot.css
@@ -1,8 +1,9 @@
 #Forgetbody {
-  background-image: url("https://www.srikrishna.ac.in/images/Slider/Slide1.jpg");
+  background-image: url("./Assets/forgotbackground.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  background-size: cover;
   height: 100vh;
 }
 
