--- a/src/Support.css
+++ b/src/Support.css
@@ -278,10 +278,8 @@ hr {
   position: absolute;
   left:200vh;
   top:200vh;
-  
-  
   text-align: center;
-  background-color: aqua;
+  background-color:blanchedalmond;
 }
 #overlayqr{
   position: absolute;
